--- a/css/subscriber/style.css
+++ b/css/subscriber/style.css
@@ -1808,7 +1808,6 @@ section .evt_gift_box .txt strong{
 
 
 
-
 @media only screen and (max-width: 1440px) {
 
 	
@@ -1891,35 +1890,13 @@ section .evt_gift_box .txt strong{
 	}
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+	/* evt_list */
+	.evt_list_conts .evt_list li strong{
+		font-size: 28px;
+	}
+	.evt_list_conts .evt_list li span{
+		font-size: 16px;
+	}
 
 
 }
@@ -2085,13 +2062,7 @@ section .evt_gift_box .txt strong{
 	}
 
 
-
-
-
-
 	/* evt01_section */
-
-
     .evt01_section {
         padding: 60px 0;
     }
@@ -2105,7 +2076,6 @@ section .evt_gift_box .txt strong{
 	.evt01_section .cht_intro_box .intro_moo {
 			left: -18px;
 	}
-
 	.evt01_section .evt_gift_box{
 		padding: 30px 20px;
 	}
@@ -2115,7 +2085,6 @@ section .evt_gift_box .txt strong{
 	.evt01_section .random_box .rdm_txt p{
 		font-size: 26px;
 	}
-	
 	.evt01_section .random_box .random_box_inner img{
 		left: 29.5%;
 		max-width: 380px;
@@ -2123,57 +2092,24 @@ section .evt_gift_box .txt strong{
 	.evt01_section .random_box .random_box_inner .btn_rdm_open{
 		font-size: 24px;
 	}
-
-
-
 	.evt01_section .calendar_box .week_box .week p span {
 		padding: 8px;
 	}
 	.evt01_section .calendar_box .week_box .week p .stamp{
 		width: 45px;
 	}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 	.evt01_section .evt_gift_box .evt01_nt_list {
 		margin: 30px 0 0;
 		padding: 30px 0 0;
 	}
-
-
 	.evt01_section .evt_gift_box .evt01_nt_list dt {
 		padding: 0 0 8px;
 		font-size: 20px;
 	}
-
 	.evt01_section .evt_gift_box .evt01_nt_list dd ul li {
-
 		padding: 0 0 0 10px;
 		font-size: 16px;
 	}
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -2181,15 +2117,9 @@ section .evt_gift_box .txt strong{
 	.evt02_section {
 		padding: 60px 0;
 	}
-
-
-
-
-
 	.evt02_section .evt_gift_box .evt02_gift_inner{
 		padding: 30px 0;
 	}
-
 	.evt02_section .evt_gift_box .evt02_nt_list {
 		padding: 30px 0 0;
 	}
@@ -2201,24 +2131,18 @@ section .evt_gift_box .txt strong{
 		padding: 0 0 0 10px;
 		font-size: 16px;
 	}
-	
-
 	.evt02_section .evt_test_box .text_list li .num span {
-
 		width: 36px;
 		height: 36px;
 		line-height: 36px;
 		font-size: 16px;
 	}
-
 	.evt02_section .evt_test_box .text_list li .tit span{
 		font-size: 24px;
 	}
 	.evt02_section .evt_test_box .text_list li.end .end_txt p {
 		font-size: 24px;
 	}
-
-
 
 
 	/* evt03_section */
@@ -2250,7 +2174,6 @@ section .evt_gift_box .txt strong{
 		bottom: -15%;
         width: 15%;
     }
-
 	.evt03_section .evt_way_box {
 		padding: 30px 20px 20px;
 		border-radius: 15px;
@@ -2269,18 +2192,14 @@ section .evt_gift_box .txt strong{
 	.evt03_section .evt_way_box .way_list li:first-child {
 		padding: 0 0 6px;
 	}
-
-
 	.evt03_section .evt03_nt_list{
 		margin: 40px 0 0;
 		padding: 30px 0 0;
 	}
-
 	.evt03_section .evt03_nt_list dt{
 		padding: 0 0 8px;
 		font-size: 20px;
 	}
-
 	.evt03_section .evt03_nt_list dd ul li{
 		padding: 0 0 0 10px;
 		font-size: 16px;
@@ -2288,24 +2207,6 @@ section .evt_gift_box .txt strong{
 	.evt03_section .evt03_nt_list dd ul li::before{
 		font-size: 16px;
 	}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -2355,16 +2256,10 @@ section .evt_gift_box .txt strong{
 	}
 
 
-
-
-
-
-
 	/* evt05_section */
 	.evt05_section {
 		padding: 60px 0;
 	}
-
 
 
 
@@ -2391,8 +2286,6 @@ section .evt_gift_box .txt strong{
 		font-size: 14px;
 	}
 
-
-
 	/* seoul_reader_section */
 	.seoul_reader_section{
 		padding: 40px 0 16px;
@@ -2407,14 +2300,6 @@ section .evt_gift_box .txt strong{
 		width: 90px;
 		height: 90px;
 	}
-
-
-
-
-
-
-
-
 
 
 	/* footer */
@@ -2566,10 +2451,6 @@ section .evt_gift_box .txt strong{
     }
 
 
-
-
-
-
 	/* visual */
 	.visual_section .inner{
 		padding: 30px 0;
@@ -2607,10 +2488,6 @@ section .evt_gift_box .txt strong{
         font-size: 16px;
         border-radius: 8px;
 	}
-
-
-
-
 	.visual_section .deco_box .v_moo {
         left: 3%;
         top: 12%;
@@ -2643,15 +2520,6 @@ section .evt_gift_box .txt strong{
     }
 
 
-
-
-
-
-
-
-
-
-
 	/* common */
 	section .evt_tit_box strong {
         padding: 5px 10px 3px;
@@ -2668,9 +2536,6 @@ section .evt_gift_box .txt strong{
         line-height: 1.3;
 		font-size: 16px;
 	}
-
-
-
 	section .evt_gift_box {
 		margin: 15px 0 0;
 		padding: 20px 15px;
@@ -2681,12 +2546,9 @@ section .evt_gift_box .txt strong{
 		padding: 0 0 10px;
 		font-size: 14px;
 	}
-
 	section .evt_gift_box img{
 		width: 42%;
 	}
-
-
 
 
 	/* evt01_section */
@@ -2735,7 +2597,6 @@ section .evt_gift_box .txt strong{
 		width: 60%;
         max-width: initial;
 	}
-	
 	.evt01_section .evt_way_box {
 		padding: 30px 15px;
 		border-radius: 10px;
@@ -2811,10 +2672,6 @@ section .evt_gift_box .txt strong{
 	.evt01_section .evt_gift_box .evt01_nt_list dd ul li{
 		font-size: 14px;
 	}
-
-
-
-
 	.rdm_popup_wrap .rdm_popup_wrap_inner .rdm_popup_close{
 		right: 5%;
 		width: 20px;
@@ -2823,7 +2680,6 @@ section .evt_gift_box .txt strong{
 	.rdm_popup_wrap .box_outer{
 		width: 100%;
 	}
-
 	.rdm_popup_wrap .box_outer .box_inner .box{
 		left: 6%;
 		width: 88%;
@@ -2848,12 +2704,6 @@ section .evt_gift_box .txt strong{
 	.rdm_popup_wrap .box_outer .win_txt img{
 		width: 100px;
 	}
-
-
-
-
-
-
 
 
 	/* evt02_section */
@@ -2923,19 +2773,14 @@ section .evt_gift_box .txt strong{
 	section.evt03_section .evt_txt_box{
 		padding: 0 0 20px;
 	}
-
-
 	.evt03_section .letter_box {
 		margin: 0 0 50px;
 		padding: 20px 15px;
 		border-radius: 10px;
 	}
-
 	.evt03_section .letter_box h4{
 		font-size: 18px;
 	}
-
-
 	.evt03_section .letter_box .input_box {
 		margin: 15px 0;
 		max-width: initial;
@@ -2954,7 +2799,6 @@ section .evt_gift_box .txt strong{
 		font-size: 12px;
 		border-radius: 20px;
 	}
-
 	.evt03_section .letter_box .letter_nt_list li {
 		position: relative;
 		padding-left: 8px;
@@ -3001,26 +2845,16 @@ section .evt_gift_box .txt strong{
     .evt03_section .evt03_nt_list dt {
         font-size: 16px;
     }
-
     .evt03_section .evt03_nt_list dd ul li {
         font-size: 14px;
     }
 
 
-
-
-
-
-
-
-
 	/* evt04_section */
-
 	.evt04_section .evt_way_box {
 		padding: 0 15px 30px;
 		border-radius: 10px;
 	}
-
 	.evt04_section .evt_way_box h4 {
 		top: -15px;
         padding: 7px 16px 5px;
@@ -3043,14 +2877,10 @@ section .evt_gift_box .txt strong{
 		line-height: 15px;
 		font-size: 10px;
 	}
-
-
-
     .evt04_section .evt_way_box .step_box.one ul li strong {
         font-size: 14px;
     }
     .evt04_section .evt_way_box .step_box.one ul li {
-		
         padding: 15px 10px;
     }
 	.evt04_section .evt_way_box .step_box.one ul li img {
@@ -3148,7 +2978,6 @@ section .evt_gift_box .txt strong{
 		height: 60px;
 	}
 
-	
 
 
 }
@@ -3158,6 +2987,7 @@ section .evt_gift_box .txt strong{
 	.evt01_section .evt_way_box .way_list li .btn_go_seoul_lg {
 		margin: 0 0 0 18px;
 	}
+
 }
 
 @media only screen and (max-height: 495px){
@@ -3199,8 +3029,7 @@ section .evt_gift_box .txt strong{
 @media only screen and (max-width: 490px){
 
 
-
-
+	/* visual */
 	.visual_section .btn_evt_end{
 		padding: 22px 20px;
 		width: 90%;
@@ -3212,10 +3041,6 @@ section .evt_gift_box .txt strong{
         width: 15px;
         height: 12px;
     }
-
-
-
-
 	.visual_section .deco_box .v_star {
         left: 28%;
         top: 11%;
@@ -3226,7 +3051,6 @@ section .evt_gift_box .txt strong{
         top: 10%;
         width: 15%;
     }
-
 	.visual_section .deco_box .v_ho {
         left: 5%;
         top: 46%;
@@ -3254,18 +3078,6 @@ section .evt_gift_box .txt strong{
     }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 	/* evt_list */
 	.evt_list_conts {
 		padding: 10px 0 16px;
@@ -3289,7 +3101,8 @@ section .evt_gift_box .txt strong{
 		height: 14px;
 	}
 
-	
+
+	/* common */
 	section .evt_txt_box{
 		font-size: 14px;
 	}
@@ -3307,6 +3120,8 @@ section .evt_gift_box .txt strong{
         left: 17%;
 		width: 65%;
 	}
+
+
 	/* evt02_section */
 	.evt02_section {
 		padding: 30px 0;
@@ -3320,7 +3135,6 @@ section .evt_gift_box .txt strong{
     .evt02_section .evt_test_box .text_list li .tit {
         padding: 0 20px 16px;
     }
-
 	.evt02_section .evt_test_box .text_list li .num span {
         width: 24px;
         height: 24px;
@@ -3345,8 +3159,6 @@ section .evt_gift_box .txt strong{
 	}
 
 
-
-
 	/* evt03_section */
 	.evt03_section {
 		padding: 30px 0;
@@ -3363,7 +3175,6 @@ section .evt_gift_box .txt strong{
 	}
 
 
-
 	/* seoul_reader_section */
 	.seoul_reader_section .sns_list li a{
 		width: 44px;
@@ -3373,40 +3184,14 @@ section .evt_gift_box .txt strong{
 
 
 }
+
 @media only screen and (max-width: 400px){
-
-
-
-
-
-
-
-
-
-
-
 
 	/* seoul_reader_section */
 	.seoul_reader_section .sns_list li a{
 		width: 40px;
 		height: 46px;
 	}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -3424,17 +3209,13 @@ section .evt_gift_box .txt strong{
 	.scroll_box .goTop{
 		margin:10px 0;
 	}
-	/*
-	.sns_share ul{
-		bottom:135px;
-	}
-		*/
 	.sns_share li{
 		width:50px;
 	}
 	.sns_share li a {
 		height:50px;
 	}
+
 
 
 }
