--- a/css/subscriber/style.css
+++ b/css/subscriber/style.css
@@ -2403,7 +2403,7 @@ section .evt_gift_box .txt strong{
 		position:absolute; 
 		left:0; 
 		right:0;
-		bottom:110px; 
+		bottom:105px; 
 	}
 	.sns_share li { 
 		width:50px; 
@@ -2993,11 +2993,11 @@ section .evt_gift_box .txt strong{
 @media only screen and (max-height: 495px){
 
 	.scroll_box .btn_box{
-		width:50px;
+		width:45px;
 	}
 	#toggle_share { 
-		width:50px; 
-		height:50px; 
+		width:45px; 
+		height:45px; 
 	}
 	#toggle_share span { 
 		font-size:0; 
@@ -3007,14 +3007,11 @@ section .evt_gift_box .txt strong{
 	}
 	#toggle_share span:before { 
 		width:100%;
-		height:50px;
+		height:5045pxpx;
 		margin:0; 
-		background-size:25px auto; 
+		background-size:20px auto; 
 		background-repeat:no-repeat; 
 		background-position:center; 
-	}
-	.sns_share ul { 
-		bottom:50px; 
 	}
 	.sns_share li { 
 		width:45px; 
