--- a/css/subscriber/style.css
+++ b/css/subscriber/style.css
@@ -6,7 +6,6 @@
     font-weight: 400;
     font-style: normal;
 }
-
 @font-face {
     font-family: 'ria-sans';
     src: url("./fonts/RiaSans-ExtraBold.woff2") format('woff2');
@@ -1940,7 +1939,6 @@ section .evt_gift_box .txt strong{
 	.inner{
 		padding: 0 20px;
 	}
-
 	header .inner{
 		padding: 20px
 	}
@@ -1955,31 +1953,15 @@ section .evt_gift_box .txt strong{
 
 
 	/* visual */
-
 	.visual_section .inner{
 		padding: 110px 0 60px;
 	}
-
 	.visual_section .evt_period dt {
 		font-size: 20px;
 	}
 	.visual_section .evt_period dd{
 		font-size: 20px;
 	}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 	.visual_section .btn_evt_end{
 		padding: 25px 50px 22px;
 		width: auto;
@@ -1996,24 +1978,6 @@ section .evt_gift_box .txt strong{
 	.visual_section .evt_note_txt p {
 		font-size: 18px;
 	}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 	/* evt_list*/
 	.evt_list_conts {
@@ -2065,7 +2029,6 @@ section .evt_gift_box .txt strong{
     .evt01_section {
         padding: 60px 0;
     }
-
 	.evt01_section .cht_intro_box img{
 		padding: 0 2px;
 	}
@@ -2109,8 +2072,6 @@ section .evt_gift_box .txt strong{
 		padding: 0 0 0 10px;
 		font-size: 16px;
 	}
-
-
 
 	/* evt02_section */
 	.evt02_section {
@@ -2207,8 +2168,6 @@ section .evt_gift_box .txt strong{
 		font-size: 16px;
 	}
 
-
-
 	/* evt04_section */
 	.evt04_section {
 		padding: 60px 0;
@@ -2254,13 +2213,10 @@ section .evt_gift_box .txt strong{
 		font-size: 22px;
 	}
 
-
 	/* evt05_section */
 	.evt05_section {
 		padding: 60px 0;
 	}
-
-
 
 	/* note_section */
 	.note_section .note_toggle_box dt{
@@ -2984,6 +2940,7 @@ section .evt_gift_box .txt strong{
 
 @media only screen and (max-width: 605px){
 
+	/* evt01_section */
 	.evt01_section .evt_way_box .way_list li .btn_go_seoul_lg {
 		margin: 0 0 0 18px;
 	}
@@ -2992,6 +2949,7 @@ section .evt_gift_box .txt strong{
 
 @media only screen and (max-height: 495px){
 
+	/* scrollbox */
 	.scroll_box .btn_box{
 		width:45px;
 	}
@@ -3007,7 +2965,7 @@ section .evt_gift_box .txt strong{
 	}
 	#toggle_share span:before { 
 		width:100%;
-		height:5045pxpx;
+		height:45px;
 		margin:0; 
 		background-size:20px auto; 
 		background-repeat:no-repeat; 
@@ -3172,9 +3130,6 @@ section .evt_gift_box .txt strong{
 	}
 
 
-	
-
-
 
 }
 
@@ -3185,7 +3140,7 @@ section .evt_gift_box .txt strong{
 		margin: 0 -4px;
 	}
 
-
+	/* scrollbox */
     #toggle_share { 
 		width:50px;
 		height:50px;
